crates/sith_python_parser/tests/snapshots/invalid_syntax@param_missing_annotation.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/param_missing_annotation.py
---
## AST

```
Module(
    ModModule {
        range: 0..35,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..16,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..11,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..10,
                                parameter: Parameter {
                                    range: 8..10,
                                    name: Identifier {
                                        id: Name("x"),
                                        range: 8..9,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 13..16,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 13..16,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 17..34,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 21..24,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 24..29,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 25..27,
                                parameter: Parameter {
                                    range: 25..27,
                                    name: Identifier {
                                        id: Name("x"),
                                        range: 25..26,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 31..34,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 31..34,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(x:): ...
  |           ^ Syntax Error: Expected an expression
2 | def foo(x:,): ...
  |


  |
1 | def foo(x:): ...
2 | def foo(x:,): ...
  |           ^ Syntax Error: Expected an expression
  |
